--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,13 +31,13 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B test --file TemelHesaplama/pom.xml
+      run: mvn -B test --file AdanaSecimApi/pom.xml
 
     - name: Add coverage to PR
       id: jacoco
       uses: madrapps/jacoco-report@v1.3
       with:
-        paths: ${{ github.workspace }}/TemelHesaplama/target/site/jacoco/jacoco.xml
+        paths: ${{ github.workspace }}/AdanaSecimApi/target/site/jacoco/jacoco.xml
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 40
         min-coverage-changed-files: 60
